deploy/manifests/apps/songs-uploader/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: songs-uploader
  labels:
    istio-injection: enabled
