deploy/manifests/apps/songs-uploader/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: songs-uploader
  labels:
    app: songs-uploader
spec:
  replicas: 3
  selector:
    matchLabels:
      app: songs-uploader
  template:
    metadata:
      labels:
        app: songs-uploader
    spec:
      serviceAccountName: songs-uploader
      containers:
        - name: songs-uploader
          image: europe-docker.pkg.dev/pbl6-363916/mirror/songs-uploader
          imagePullPolicy: Always
          args:
            - "--bind"
            - "0.0.0.0:5000"
            - "-w"
            - "2"
            - "--worker-class"
            - "gevent"
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5000
            failureThreshold: 1
            periodSeconds: 10
            timeoutSeconds: 5
          startupProbe:
            httpGet:
              path: /healthz
              port: 5000
            failureThreshold: 30
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 5
          resources:
            requests:
              cpu: 200m
              memory: 128Mi
            limits:
              cpu: 400m
              memory: 512Mi
