deploy/manifests/apps/songs-uploader/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: songs-uploader
  labels:
    app: songs-uploader
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    app: songs-uploader
